# gts-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: cli.rs  gen_schemas.rs  logging.rs  main.rs  server.rs
gts-macros/: Cargo.toml  README.md
gts-macros-cli/src/schemas/: gts.x.core.events.type.v1~.schema.json  gts.x.core.events.type.v1~x.core.audit.event.v1~x.marketplace.orders.purchase.v1~.schema.json  gts.x.core.events.type.v1~x.core.audit.event.v1~x.marketplace.orders.purchase.v1~x.marketplace.order_purchase.payload.v1~.schema.json
gts-macros/src/: lib.rs
gts-macros/tests/: inheritance_tests.rs  inheritance_tests_mixed.rs  integration_tests.rs  pretty_test.rs  serde_rename_tests.rs
gts-macros/tests/compile_fail/: base_parent_mismatch.rs  base_parent_mismatch.stderr  base_parent_no_generic.rs  base_parent_no_generic.stderr  base_parent_single_segment.rs  base_parent_single_segment.stderr  base_struct_both_id_and_type.rs  base_struct_both_id_and_type.stderr  base_struct_missing_id.rs  base_struct_missing_id.stderr  base_struct_wrong_gts_type.rs  base_struct_wrong_gts_type.stderr  base_struct_wrong_id_type.rs  base_struct_wrong_id_type.stderr  invalid_gts_id_too_many_tokens.stderr  non_gts_generic.rs  non_gts_generic.stderr  version_mismatch_major.rs  version_mismatch_major.stderr  version_mismatch_minor_missing_schema.rs  version_mismatch_minor_missing_schema.stderr  version_mismatch_minor_missing_struct.rs  version_mismatch_minor_missing_struct.stderr
gts/src/: entities.rs  entities_tests.rs  files_reader.rs  gts.rs  lib.rs  ops.rs  ops_tests.rs  path_resolver.rs  schema_cast.rs  schema_cast_tests.rs  store.rs  store_tests.rs  x_gts_ref.rs
(+5 files in other folders)
