[workspace]
members = ["gts", "gts-cli", "gts-macros"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allowed pedantic lints with explanations:
# - uninlined_format_args: Style preference; `format!("{}", x)` is sometimes clearer than `format!("{x}")`
uninlined_format_args = "allow"
# - must_use_candidate: Too noisy; not all getters need #[must_use], we add it where truly important
must_use_candidate = "allow"
# - missing_errors_doc: Documentation overhead; error types are self-explanatory from Result<_, Error>
missing_errors_doc = "allow"
# - module_name_repetitions: GTS domain requires explicit naming (e.g., GtsError in gts module)
module_name_repetitions = "allow"
unwrap_used = "deny"
expect_used = "deny"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GTS Community"]
license = "Apache-2.0"
repository = "https://github.com/globaltypesystem/gts-rust"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1.10", features = ["v5"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Server dependencies
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
chrono = "0.4"

# JSON Schema validation
jsonschema = "0.18"

# File system
walkdir = "2.5"

# Format parsing
serde_yaml = "0.9"
